# bpy-utils

./: .gitignore  README.md  pyproject.toml
src/bpyutils/formatting/: std.py
src/bpyutils/schemas/: __init__.py  common.py  injection.py
src/bpyutils/templating/: injection.py
test/: test_bpyutils.py
test/bpyutils/: test_formatting.py  test_schemas.py  test_templating.py
